--- a/effect/login.html
+++ b/effect/login.html
@@ -22,7 +22,7 @@
 #open {
 	margin: 0;
 	cursor: pointer;
-	background-image:  url(open.png);
+	background-image:  url(../images/open.png);
 	background-repeat: no-repeat;
 	background-position:  8px 7px;
 	color: white;
@@ -31,7 +31,7 @@
 }
 
 #login .close {
-	background-image: url(close.png);
+	background-image: url(../images/close.png);
 }
 
 #open:hover {
@@ -61,14 +61,19 @@
 	padding-right: 15px;
 }
 </style>
-<script src="jquery.min.js"></script>
+<script src="../jquery/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
-	$('open').click(function(evt){
-        evt.preventDefault();
-        $('#login form').slideToggle(300);
-        $(this).toggleClass('close');
-	}); // end click
+	$('#open').click(function(evt){
+	   evt.preventDefault();
+	   if ($('#login form').is(':hidden')){
+	       $('#login form').fadeIn(300);
+	       $(this).addClass('close');
+       }else{
+           $('#login form').slideUp(600);
+           $(this).removeClass('close');
+       }
+    });
 }); // end ready
 </script>
 </head>
