--- a/faq/faq.html
+++ b/faq/faq.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8">
 <title>A One Page Faq</title>
 <link href="site.css" rel="stylesheet">
-<script src="jquery.min.js"></script>
+<script src="../jquery/jquery.min.js"></script>
 <style type="text/css">
 h2 {
-	background: url(open.png) no-repeat 0 11px;
+	background: url(../images/open.png) no-repeat 0 11px;
 	padding: 10px 0 0 25px;
 	cursor: pointer;
 }
 h2.close {
-	background-image: url(close.png);
+	background-image: url(../images/close.png);
 }
 .answer {
 	margin-left: 25px;	
@@ -21,7 +21,7 @@ h2.close {
 <script>
 $(document).ready(function() {
     $('.answer').hide();
-    $('main h2').click(function(){
+    $('.main h2').click(function(){
         var $answer = $(this).next('.answer');
         if($answer.is(':hidden')){
             $answer.slideDown();
@@ -30,7 +30,7 @@ $(document).ready(function() {
             $answer.fadeOut();
             $(this).removeClass('close');
         }
-    }); // end click
+    });
 }); // end ready
 </script>
 </head>
